fix size and add spacing

--- a/src/App.css
+++ b/src/App.css
@@ -210,7 +210,7 @@ p.graspBold{
   color: #152349;
   display: flex;
   font-family: "Lato", sans-serif;
-  font-size: 14px;
+  font-size: 20px;
   font-weight:bold;
   padding-top: 25px;
   padding-bottom: 14px;
